# Roc

./: CMakeLists.txt  compile_commands.json  main  main.cpp  mm.h  test.cpp  test.h
.cache/clangd/index/: main.cpp.4BD53C91F8D04786.idx  maroc.h.D20AF93BD3B12327.idx  mm.h.D1D6E4FB8511ADF2.idx  noncopyable.cpp.2D3B06D3314C169B.idx  noncopyable.h.38D575ED868609DD.idx  test.cpp.663770A100D7F157.idx  test.h.1C34F9C7B025B23E.idx  test.h.272C7A09C4AD35A1.idx  testtt.h.46C863FE3802F24F.idx  text.cpp.D1A26447F8CA21CC.idx
base/: BaseHashKey.h  CMakeLists.txt  copyable.h  macro.h  maroc.h  noncopyable.h
base/utility/: types.h
net/: CMakeLists.txt  Channel.cpp  Channel.h  ChannelManager.cpp  ChannelManager.h  Socket.h  SocketOperation.h  SocketOperationLinux.cpp
net/Acceptor/: Acceptor.cpp  Acceptor.h
net/Socket/: InetAddress.h  Socket.h  SocketUtilty.h
net/TcpConnection/: TcpConnetcion.h
net/eventLoop/: EventLoop.cpp  EventLoop.h
net/poller/: IPoller.h  Poller.cpp  Poller.h
